# twi_bot_shard

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .uvrc  CLAUDE.md  CONSOLIDATED_TASKS.md  DOCUMENTATION_ORGANIZATION_PLAN.md  DOCUMENTATION_SUMMARY.md  Dockerfile  FEATURES.md  PROJECT_STRUCTURE.md  RAILWAY_MIGRATION.md  README.md  REFACTORING_SUMMARY.md  REORGANIZATION_SUMMARY.md  SETUP.md  TEST_COVERAGE_ANALYSIS.md  TEST_FAILURES_ANALYSIS.md  TEST_IMPROVEMENT_ROADMAP.md  build_faiss_index.py  cog_documentation.md  cognita_db_tables.sql  command_updates.md  commit-summary.md  config.py  db_optimizations.sql  format.py  lint.py  main.py  mypy.ini  patch_notes.md  pyproject.toml  query_faiss_schema.py  railway.json  railway.toml  requirements.txt  run_additional_optimizations.py  run_db_optimizations.py  (+14 more)
.cache/faiss/: schema_index.faiss
.claude/: settings.local.json
.github/workflows/: ci.yml  security-scan.yml
.junie/: guidelines.md
cogs/: creator_links.py  example_cog.py  external_services.py  forum.py  gallery.py  info.py  innktober.py  interactive_help.py  links_tags.py  mods.py  other.py  owner.py  patreon_poll.py  pins.py  quotes.py  report.py  roles.py  settings.py  stats.py  stats_commands.py  stats_listeners.py  stats_original.py  stats_queries.py  stats_tasks.py  stats_utils.py  summarization.py  twi.py  twi_content.py  twi_original.py  twi_password.py  twi_search.py  twi_utils.py  utility.py
config/: __init__.py
database/: additional_optimizations.sql  cognita_db_tables.sql  db_optimizations.sql  error_telemetry.sql  init.sql
database/migrations/: 001_add_pgvector.sql
database/utilities/: gallery-migration.sql
docs/: ERROR_HANDLING.md  FEATURES.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  api_documentation.md  architecture.md  archived_code.md  backup_recovery.md  caching_strategy.md  ci.md  cog_documentation.md  contributing.md  database_best_practices.md  database_migration_plan.md  database_optimizations.md  dependency_injection.md  deployment_guide.md  developer_onboarding.md  documentation_maintenance.md  features.md  linting.md  log_aggregation.md  monitoring_alerting.md  permissions.md  plan.md  property_based_testing.md  security_review_process.md  tasks.md  user_manual.md
docs/archived/migration/: README.md  backup_cloudsql.py  backup_cloudsql_gcloud.py  backup_gcloud_simple.bat  restore_railway.py  restore_railway_sql.py  setup_railway_env.md
docs/developer/: database.md  environment-variables.md  error-handling.md  getting-started.md  linting.md  permissions.md  testing.md
docs/developer/setup/: environment-variables.md
docs/meta/: contributing.md
docs/meta/archived/: doc-review-2024-10.md
docs/operations/: ci.md  deployment.md  security.md
docs/project/completed/: tasks-2024.md
models/: __init__.py  base.py
models/tables/: __init__.py  channel.py  commands.py  creator_links.py  gallery.py  gallery_migration.py  join_leave.py  link.py  messages.py  quote.py  reactions.py  report.py  role.py  server_settings.py  servers.py  user.py
scripts/: README.md
scripts/database/: apply_additional.py  apply_optimizations.py  optimize.py
scripts/development/: lint.py  setup_hooks.py
scripts/migration/: backup_cloudsql.py  backup_cloudsql_gcloud.py  backup_gcloud.ps1  fix_bucket_permissions.ps1  restore_railway.py  restore_railway_sql.py
scripts/schema/: build_faiss_index.py  populate_schema_embeddings.py  query_faiss_schema.py
tests/: README.md  conftest.py  fixtures.py  mock_factories.py  test-results.md  test_ao3_auth.py  test_chaos_engineering.py  test_cogs.py  test_command_groups.py  test_common_patterns.py  test_database_transactions.py  test_db_connection.py  test_db_operations.py  test_decorators.py  test_dependencies.py  test_documentation_code.py  test_documentation_links.py  test_end_to_end.py  test_error_handling_property_based.py  test_external_api_integration.py  test_gallery_cog_admin.py  test_gallery_cog_repost.py  test_integration.py  test_interactive_help.py  test_load_testing.py  test_mock_example.py  test_mods_cog_unit.py  test_other_cog.py  test_owner_cog.py  test_performance_benchmarks.py  test_permissions.py  test_property_based.py  test_query_cache.py  test_query_cache_property_based.py  test_regression.py  test_resource_optimization.py  test_secret_manager.py  test_secret_manager_property_based.py  test_sqlalchemy_models.py  test_stats_cog.py  (+6 more)
utils/: DATABASE.md  README.md  base_cog.py  command_groups.py  common_patterns.py  db.py  db_optimizations.sql  db_service.py  decorators.py  error_handling.py  exceptions.py  gallery_data_extractor.py  http_client.py  logging.py  permissions.py  protocols.py  query_cache.py  repository.py  repository_factory.py  resource_monitor.py  schema_search.py  secret_manager.py  service_container.py  sqlalchemy_db.py  validation.py  webhook_manager.py
utils/repositories/: __init__.py  creator_link_repository.py  gallery_mementos_repository.py  gallery_migration_repository.py  gallery_repository.py  link_repository.py  message_repository.py  quote_repository.py  report_repository.py  server_settings_repository.py
